<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Main">
    <item android:id="@+id/pealeht" android:title="@string/pealeht"
        android:orderInCategory="1" app:showAsAction="never" />
    <item android:id="@+id/otsing" android:title="@string/otsing"
        android:orderInCategory="2" app:showAsAction="never" />
    <item android:id="@+id/profiil" android:title="@string/profiil"
        android:orderInCategory="3" app:showAsAction="never" />
    <item android:id="@+id/sobrad" android:title="@string/sobrad"
        android:orderInCategory="4" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="5" app:showAsAction="never" />
    <item android:id="@+id/logivalja" android:title="@string/logivalja"
        android:orderInCategory="6" app:showAsAction="never" />
</menu>
