<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pealeht"
            android:title="@string/pealeht"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item
            android:id="@+id/profiil"
            android:title="@string/profiil"
            android:icon="@drawable/ic_person_black_24dp"/>
        <item
            android:id="@+id/minu_spordialad"
            android:title="@string/minu_spordialad"
            android:icon="@drawable/ic_favorite_black_24dp"/>
        <item
            android:id="@+id/sobrad"
            android:title="@string/sobrad"
            android:icon="@drawable/ic_people_black_24dp"/>
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
        <item
            android:id="@+id/logivalja"
            android:title="@string/logivalja"
            android:icon="@drawable/ic_power_settings_new_black_24dp"/>
    </group>
</menu>