<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/oldPassword"
        android:layout_gravity="center_horizontal"
        android:background="#fff1f1f1"
        android:fontFamily="sans-serif"
        android:hint="@string/oldPassword"
        android:textColorHint="#ff939393"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:layout_marginTop="80dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/newPassword1"
        android:layout_gravity="center_horizontal"
        android:background="#fff1f1f1"
        android:fontFamily="sans-serif"
        android:hint="@string/newPassword1"
        android:textColorHint="#ff939393"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/newPassword2"
        android:layout_gravity="center_horizontal"
        android:background="#fff1f1f1"
        android:fontFamily="sans-serif"
        android:hint="@string/newPassword2"
        android:inputType="textPassword"
        android:textColorHint="#ff939393"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/changePassword"
        android:textColor="#fff"
        android:id="@+id/changePasswordBtn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#40bf40"
        android:stateListAnimator="@null"
        android:onClick="changePassword"/>

</LinearLayout>