<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lisa_asukoht"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textColor="#ff41815b"
        android:textSize="32dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/vali_linn"
        android:textColorHint="#ff939393"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/täpne_asukoht"
        android:textColor="#fff"
        android:id="@+id/button5"
        android:layout_marginTop="20dp"
        android:background="#ff039069"
        android:stateListAnimator="@null"
        android:onClick="openMap"
        android:layout_gravity="center_horizontal" />

</LinearLayout>