<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#ff039069" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/kolmas_andmed"
            android:id="@+id/textView8"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="fill_vertical"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lisa_asukoht"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="32dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/täpne_asukoht"
        android:textColor="#fff"
        android:id="@+id/button5"
        android:layout_marginTop="80dp"
        android:background="#ff039069"
        android:stateListAnimator="@null"
        android:onClick="openMap"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="asukoht"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff41815b"
        android:textSize="24dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jatavahele"
            android:id="@+id/button4"
            android:background="#fff"
            android:textColor="#ff039069"
            android:stateListAnimator="@null"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/edasi"
            android:textColor="#fff"
            android:id="@+id/button3"
            android:layout_marginTop="210dp"
            android:background="#ff039069"
            android:stateListAnimator="@null"
            android:layout_marginLeft="170dp"
            android:onClick="createHome"
            android:layout_marginRight="20dp" />

    </LinearLayout>

</LinearLayout>