<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:weightSum="1">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#ff039069">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/esimene_andmed"
            android:id="@+id/textView6"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="fill_vertical"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView3"
        android:textColor="#ff41815b"
        android:textSize="32dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/man" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/lisauuspilt"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:background="#fff"
        android:textColor="#ff039069"
        android:stateListAnimator="@null"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jatavahele"
            android:id="@+id/button4"
            android:background="#fff"
            android:textColor="#ff039069"
            android:stateListAnimator="@null"
            android:layout_marginTop="130dp"
            android:onClick="createSports"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/edasi"
            android:textColor="#fff"
            android:id="@+id/button3"
            android:layout_marginTop="130dp"
            android:background="#ff039069"
            android:stateListAnimator="@null"
            android:layout_marginLeft="170dp"
            android:onClick="createSports"
            android:layout_marginRight="20dp" />

    </LinearLayout>

</LinearLayout>