<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">

        <Spinner
            android:id="@+id/sport"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:textColor="#ff41815b"
            android:background="#818081"
            android:popupBackground="#818081"
            android:layout_marginTop="40dp" />

        <Spinner
            android:id="@+id/raskustase"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="#818081"
            android:popupBackground="#818081"
            android:textColor="#ff41815b"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/dateText"
            android:paddingStart="10dp"
            android:textColor="#818081"
            android:textSize="18dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dateText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date"
            android:id="@+id/date"
            android:paddingStart="10dp"
            android:textColor="#818081"
            android:textSize="18dp"
            android:layout_marginTop="10dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            android:id="@+id/calendar"
            android:onClick="setDate"
            android:stateListAnimator="@null"
            android:background="#fff"
            android:layout_marginLeft="10dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/timeText"
            android:id="@+id/timeText"
            android:paddingStart="10dp"
            android:textColor="#818081"
            android:textSize="18dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time"
            android:id="@+id/time"
            android:paddingStart="10dp"
            android:textColor="#818081"
            android:textSize="18dp"
            android:layout_marginTop="10dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time"
            android:id="@+id/imageButton"
            android:onClick="setTime"
            android:stateListAnimator="@null"
            android:background="#fff"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sugu"
            android:id="@+id/textView5"
            android:paddingStart="10dp"
            android:textColor="#818081"
            android:textSize="18dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sugu"
            android:id="@+id/sugu"
            android:paddingStart="10dp"
            android:textColor="#818081"
            android:textSize="18dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mees"
                android:id="@+id/r1"
                android:layout_marginTop="6dp"
                android:buttonTint="#818081"
                android:textColor="#818081"
                android:textSize="16dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naine"
                android:id="@+id/r2"
                android:layout_marginTop="6dp"
                android:buttonTint="#818081"
                android:textColor="#818081"
                android:textSize="16dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:id="@+id/r3"
                android:layout_marginTop="6dp"
                android:buttonTint="#818081"
                android:textColor="#818081"
                android:textSize="16dp" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>